samples/_failures_safe/1761399022_99a703_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5706f172.c: In function ‘main’:
./samples/SAFE/__tmp_5706f172.c:166:5: error: expected declaration or statement at end of input
  166 |     free_log_collection(&collection);
      |     ^~~~~~~~~~~~~~~~~~~
